# Admorphiq

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.wiki/: README.md  schema.md
configs/: llm.yaml  llm_bench_tasks.yaml
docs/: PRE_SUBMISSION_CHECKLIST.md  game_win_conditions_taxonomy.md  llm_wiki_karpathy_analysis_ko.md  r28_world_model_agent.md  sprint_m1_architecture_20260625.md  submission_strategy_r7.md
notebooks/: SUBMISSION.md  kaggle_submission.py
scripts/: _decision_bench.sh  _forward_data.py  _holdout_ttt.sh  _r37_full25.sh  _r8_budget_sweep.sh  _rl_curve.sh  _run_v5_score.sh  _transfer_test.sh  _v5_pipeline.sh  _v6_rl_pipeline.sh  _wm_full25.sh  analyze_logs.py  analyze_mechanics.py  analyze_trace.py  analyze_wiki_agent_trace.py  analyze_wiki_agent_v1_8b.json  analyze_wiki_agent_v3.json  analyze_wiki_agent_v4.json  analyze_wiki_agent_v5.json  bench_llm.py  bench_llm_results.json  bench_llm_selection.json  bench_llm_selection.py  classify_games.py  classify_results.json  collect_transitions.py  diff_results.json  efficiency_general_m1.json  efficiency_general_nav.json  efficiency_general_r17.json  enrich_wiki_game_pages.py  ensemble_results.json  eval_forward_transfer.py  extract_wiki_traces.py  forward_transfer.json  g1_g4_direct_results.json  game_strategy_map.json  generate_brittle_traces.py  generate_traces.py  generate_wiki_game_pages.py  (+87 more)
tests/: test_agent.py  test_analyze_trace.py  test_arrangement.py  test_bc_agent.py  test_buffer.py  test_classify_contract.py  test_code_agent.py  test_d4_remap.py  (+48 more)
(+611 files in other folders)
