[project]
name = "admorphiq"
version = "0.1.0"
description = "Adaptive Morphing Intelligence — ARC-AGI-3 agent"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "numpy",
    "pillow",
    "arc-agi>=0.9.1",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "tensorboard",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
